# Laserdanger

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Get1D_profiles_swash_accum.m  IMPLEMENTATION_PLAN.md  L1_batchpipeline.m  L1_pipeline.m  L2_pipeline.m  README.md  ResidualKernelFilter.m  accumpts.m  accumpts_L2.m  environment.yml  fitPlane.m  lidar_config.m  lidar_plot.html  requirements.txt  roundToHalfHour.m  split_L1_days.m
data/: plot_test05_17.mat
matlab/: CLAUDE.md  Get3_1Dprofiles.m  Get_intensity_contours.m  L1_pipeline.m  L2_pipeline_testing.m  README.md  accumpts.m  detect_outliers_conv2D.m  get_runupStats_L2.m  lidar_config.m  process_lidar_L1.m
python/: CLAUDE.md  livox_config.json  plan.md  pyproject.toml  requirements.txt  run_l2_test.py
python/code/: mop.py  phase1.py  phase2.py  phase3.py  phase4.py  profiles.py  runup.py  utils.py  validation.py  verify_phase1.py  verify_phase2.py
python/configs/: towr_livox_config_20260120.json
python/docs/: formats.md  pipeline_overview.md  plan.md
python/examples/: basic_l1_processing.py  batch_processing.py  l2_runup_analysis.py
python/mop_data/: AddFracMopNumsToSA.m  MopTable.csv
python/scripts/: animate_l1_slope.py  assess_nc.py  plot_runup.py  plot_runup_timestack.py  run_daily_l1.py  run_daily_l2.py
python/scripts/processing/: run_daily_l1.py  run_daily_l2.py
python/scripts/qc/: qc_level1.py  qc_level2.py  verify_l1.py  verify_l2.py
python/scripts/visualization/: create_pipeline_diagram.py  debug_multisignal.py  gif_nc_l1.py  gif_nc_l2.py  plot_runup.py  plot_runup_multisignal.py  plot_runup_timestack.py  plot_runup_varint.py  test_multisignal_all_bursts.py  test_multisignal_runup.py  visualize_l1.py  visualize_l2.py
python/tests/: test_edge_cases.py  test_l2_enhancements.py  test_mop.py  test_phase1.py  test_phase1_internal.py  test_phase2.py  test_phase2_internal.py  test_phase3.py  test_phase3_internal.py  test_phase4.py  test_phase4_comprehensive.py  test_phase8_enhancements.py  test_profiles.py  test_runup.py  test_utils.py  test_validation.py
