[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-pipeline"
version = "1.0.0"
description = "Python pipeline for processing Livox Avia lidar data into beach DEMs and wave runup statistics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ashton Domi", email = "adomi@ucsd.edu"}
]
maintainers = [
    {name = "Ashton Domi", email = "adomi@ucsd.edu"}
]
keywords = [
    "lidar",
    "point-cloud",
    "coastal",
    "beach",
    "DEM",
    "runup",
    "oceanography",
    "geospatial"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "laspy>=2.0.0",
    "xarray>=0.19.0",
    "netCDF4>=1.5.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
numba = [
    "numba>=0.54.0",
]

[project.scripts]
lidar-pipeline = "phase4:main"
verify-l1 = "scripts.verify_l1:main"
verify-l2 = "scripts.verify_l2:main"

[project.urls]
Homepage = "https://github.com/Laserdanger/lidar-pipeline"
Documentation = "https://github.com/Laserdanger/lidar-pipeline/tree/main/docs"
Repository = "https://github.com/Laserdanger/lidar-pipeline"
Issues = "https://github.com/Laserdanger/lidar-pipeline/issues"

[tool.setuptools]
packages = ["code", "scripts"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    # Ignore numpy ABI compatibility warning (harmless with numpy 2.x + Python 3.14)
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
